# 42sh

./: .gitignore  README.md  SUUUU.sh  grammar  meson.build
src/: .42suuu.txt  42sh  Makefile  SUUUU.sh  a.sh  cursed.sh  main.c  meson.build  meson2.build  test  test.py  test.sh  test2
src/ast/: ast.c  ast_free.c  ast_init.c  ast_print.c  meson.build
src/builtin/: builtin.c  builtin.h  main.c  meson.build
src/builtin/trash/: vector.c  vector.h
src/data_struct/: dump.c  f_hash_map.c  hash_map.c  hash_map_utils.c  meson.build  my_string.c  vector.c
src/execute/: execute.c  execute.h  execute_tools.c  expand_tools.c  field_splitting.c  free.c  meson.build  my_string.c  parse_execute_loop.c  pipe.c  redirection.c
src/include/: ast.h  ast_free.h  ast_init.h  ast_print.h  builtin.h  execute.h  execute_tools.h  expand_tools.h  f_hash_map.h  field_splitting.h  hash.h  hash_map.h  hash_map_global.h  hash_map_utils.h  lexer.h  lexer_utils.h  my_string.h  parse_execute_loop.h  parser.h  parser_cmd.h  parser_cmd_sh.h  parser_cmd_sp.h  parser_cplist.h  pipe.h  redirection.h  token.h  utils.h  vector.h
src/lexer/: lexer.c  lexer2.c  lexer_utils.c  meson.build  test.sh  token.h
src/parser/: meson.build  parser.c  parser_cmd.c  parser_cmd_sh.c  parser_cmd_sp.c  parser_cplist.c  re_parser.c  vector.c
src/test_files/: test3.sh
src/test_shell/: test1.sh  test10.sh  test2.sh  test4.sh  test_parsing.sh  test_suite.sh
src/trash/: grammar step2  grammar step2.sh  grammar step22.sh  meson.build_to_move_before_submission
src/utils/: meson.build  utils.c
(+193 files in other folders)
